kubernetes/enable-mtls.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "demo"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app: helidon-examples-todo-backend
  mtls:
    mode: PERMISSIVE
