kubernetes/authorization-policy-allow-frontend.yml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "frontend-creator"
  namespace: demo
spec:
  selector:
    matchLabels:
      app: frontend
  rules:
    - to:
        - operation:
            methods: ["GET", "POST", "DELETE"]
